Replace deprecated Float ctor with Float::valueOf